# ARGUS

./: .argus-auth.example.toml  .argus-policy.example.toml  .dockerignore  .gitattributes  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  UPGRADE.md  action.yml  pyproject.toml
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  desktop-release.yml  example-argus.yml  pages.yml  release.yml
argus/: __init__.py  __main__.py  apispec.py  auth.py  authorization.py  baseline.py  benchmark.py  chains.py  compare.py  compliance.py  fix.py  fixpr.py  gitutil.py  mcp_server.py  models.py  notify.py  pipeline.py  policy.py  prcomments.py  precommit.py  reachability.py  sbom.py  state.py  suppressions.py  surface.py
argus/agents/: __init__.py  authbreaker.py  authztester.py  base.py  businesslogic.py  crawlerbot.py  csrfhunter.py  dataexposure.py  domxss.py  fileattacker.py  fuzzer.py  graphqlagent.py  headerpoker.py  idorhunter.py  injector.py  mcpsecurity.py  promptinjection.py  racecondition.py  reconbot.py  ssrfprober.py  sstiprober.py  websocketagent.py  xsshunter.py
argus/cli/: __init__.py  main.py  output.py
argus/commands/: __init__.py  compare_cmd.py  config_cmd.py  demo_cmd.py  history_cmd.py  setup_cmd.py  status_cmd.py  suppress_cmd.py  surface_cmd.py
argus/config/: __init__.py  defaults.py  settings.py
argus/demo/: __init__.py  target.py
argus/llm/: __init__.py  detector.py  orchestrator.py  prompts.py  provider.py  reasoning.py
argus/report/: __init__.py  exporters.py
argus/report/templates/: report.html.j2
argus/sandbox/: __init__.py  callback_server.py  docker_manager.py  dockerfile_gen.py
argus/scanner/: __init__.py  dependencies.py  iac.py  image_cve.py  ingestion.py  popular_packages.py  rules_builtin.py  secrets.py  semgrep_runner.py  supplychain.py
docs/: README.md  authenticated-scanning.md  ci-integration.md  getting-started.md  troubleshooting.md
docs/dev/: ARGUS_CONTEXT.md  SCREENSHOTS.md
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/public/: report.json
gui/src/: App.tsx  adapter.ts  data.ts  store.ts  styles.css  theme.ts
gui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs
gui/src/components/: ArgusEye.tsx  Decor.tsx  Panoptes.tsx  Sidebar.tsx
gui/src/screens/: CodeView.tsx  Dashboard.tsx  LiveAttack.tsx  NewScan.tsx  Reports.tsx  Settings.tsx
packaging/: README.md  argus.spec  argus_entry.py
tests/: conftest.py
tests/unit/: test_agent_baseline_guard.py  test_agent_smoke.py  test_agents.py  test_apispec.py  test_auth.py  test_authorization.py  test_authztester.py  test_baseline.py  test_benchmark.py  test_businesslogic.py  test_chains.py  test_cli.py  test_compare.py  test_compliance.py  test_config.py  test_dataexposure.py  test_dedup.py  test_detector.py  test_dockerfile_gen.py  test_domxss.py  test_exporters_state.py  test_fix.py  test_fixpr.py  test_gitutil.py  test_iac.py  test_image_cve.py  test_ingestion.py  test_mcp_server.py  test_mcpsecurity.py  test_models.py  test_notify.py  test_orchestrator.py  test_pipeline.py  test_poc.py  test_policy.py  test_prcomments.py  test_precommit.py  test_promptinjection.py  test_reachability.py  test_reasoning.py  (+10 more)
website/: 404.html  index.html  robots.txt  sitemap.xml
website/assets/: site.js  style.css
website/changelog/: feed.xml  index.html
website/docs/: index.html
website/download/: index.html
website/security/: index.html
