[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-sec"
version = "0.4.0"
description = "Argus — AI-powered security audit agent. Point it at a repo. It reads the code, spins up the app, and attacks it."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sarthak-47", email = "0906sarthak@gmail.com" }]
keywords = ["security", "audit", "sast", "pentest", "llm", "vulnerability", "scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "platformdirs>=4.2",
    "jinja2>=3.1",
    "psutil>=5.9",
    "GitPython>=3.1",
    "PyYAML>=6.0",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Heavy / platform-specific tools. Installed on demand; Argus degrades gracefully without them.
semgrep = ["semgrep>=1.50"]
audit = ["pip-audit>=2.7"]
# DOM-XSS/SPA testing (DomXSSHunter). Also run `playwright install chromium` once installed.
browser = ["playwright>=1.45"]
# Auto-sandboxing a repo target for `argus attack`/`argus audit` (build + run it
# in Docker). Without this, point Argus at an already-running app with --url.
sandbox = ["docker>=7.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
argus = "argus.cli.main:app"

[project.urls]
Homepage = "https://github.com/Sarthak-47/ARGUS"
Repository = "https://github.com/Sarthak-47/ARGUS.git"

[tool.setuptools.packages.find]
include = ["argus*"]

[tool.setuptools.package-data]
argus = ["scanner/rules/*.yaml", "report/templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
