[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-sec"
version = "1.1.0"
description = "Argus — AI-powered security audit agent. Point it at a repo. It reads the code, spins up the app, and attacks it."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sarthak-47", email = "0906sarthak@gmail.com" }]
keywords = ["security", "audit", "sast", "pentest", "llm", "vulnerability", "scanner"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "typer>=0.12",
    "rich>=15.0.0",
    "httpx>=0.27",
    "platformdirs>=4.2",
    "jinja2>=3.1",
    "psutil>=7.2.2",
    "GitPython>=3.1",
    "PyYAML>=6.0",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
# Heavy / platform-specific tools. Installed on demand; Argus degrades gracefully without them.
semgrep = ["semgrep>=1.50"]
audit = ["pip-audit>=2.10.1"]
# DOM-XSS/SPA testing (DomXSSHunter). Also run `playwright install chromium` once installed.
browser = ["playwright>=1.45"]
# Auto-sandboxing a repo target for `argus attack`/`argus audit` (build + run it
# in Docker). Without this, point Argus at an already-running app with --url.
sandbox = ["docker>=7.0"]
# Expose scan/attack/fix as MCP tools so an editor agent (Copilot/Cursor/Claude
# Code) can run Argus directly: `argus mcp-server`.
mcp = ["mcp>=1.28.1"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[project.scripts]
argus = "argus.cli.main:app"

[project.urls]
Homepage = "https://github.com/Sarthak-47/ARGUS"
Repository = "https://github.com/Sarthak-47/ARGUS.git"

[tool.setuptools.packages.find]
include = ["argus*"]

[tool.setuptools.package-data]
argus = ["scanner/rules/*.yaml", "report/templates/*.j2"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
